# shapoist_server

./: Cargo.toml  LICENSE  README.MD
admin/: admin.html
book/: book.toml
book/src/: SUMMARY.md  doc.md  download.md  index.md
play/: play.html  shapoist_client-de4c0fca5ab4e494.js  shapoist_client-ee4aaebc0f789275.js
src/: main.rs
