[package]
name = "shapoist_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.59.0", features = ["serve-static"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
shapoist_request = { path = "../shapoist_request", features = ["server"] }